--- a/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/data_management.html
+++ b/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/data_management.html
@@ -56,7 +56,7 @@
             </p>
             <p>
                 The transition dates of the phenophases are then estimated from the <br> 
-                series of classified images, the analysis of which can be viewed under "<a href="/analysis/">Analysis</a>."
+                series of classified images, the analysis of which can be viewed under <a href="/analysis/">Site Analysis</a>.
             </p>
         </div>
         {% endblock %}
