--- a/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/home.html
+++ b/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/home.html
@@ -10,20 +10,24 @@
         <div class="jumbotron text-white" style="width:100%; backgroud-size: cover;  background-image: linear-gradient(rgba(88,88,88,0.6),rgba(88,88,88,0.6)), url({% static 'background.jpg' %})">
 
             <h1> Phenology Analysis Suite</h1>
-            <p class="lead"> Content content content </p>
+            <p class="lead"> 
+                A suite of analysis tools to study the phenology of deciduous forests. These analyses are powered 
+                by machine learning applied to time series of images captured of deciduous forest sites.  
+            </p>
             
 
         </div>
     </div>
     <h2 style="margin-top: 1.5rem;"> Features </h2>
-    <div class="row" style="width:100%; margin-top: 1rem;">  
+    <div class="row" style="width:100%; margin-top: 1rem; margin-bottom: 3rem;">  
         <div class="col">
             <div class="card">
                 <div class="card-header bg-primary"> </div>
-                <div class="card-body"> 
+                <div class="card-body" style="min-height: 289px;"> 
                     <h4> <b> Data Management </b> </h4>
                     <p> 
-                        Manage your phenology data across multiple locations. <br><br> Upload images of the site to take advantage of machine learning algrothims to classify
+                        Manage your phenology data across multiple locations. <br><br> 
+                        Upload images of the site to take advantage of machine learning algrothims to classify
                         and determine phenophases and transition dates.
                     </p>
                 </div>
@@ -35,9 +39,13 @@
         <div class="col">
             <div class="card">
                 <div class="card-header bg-primary">  </div>
-                <div class="card-body"> 
+                <div class="card-body" style="min-height: 289px;"> 
                     <h4> <b> Site Analysis </b> </h4>
-                    Contnt content content content
+                    <p> 
+                        Analyize site phenophase onset and duration trends. <br><br>
+                        Select a site to view tables and graphs of bud burst and leaf senescence onset dates and durations, 
+                        as well as view images of the site at said phenophase transition dates.
+                    </p>
                 </div>
                 <div class="card-footer" style="display:flex;justify-content:center;align-items:center;"> 
                     <a href="/analysis/" class="btn btn-primary"> Go To Site Analysis</a>
@@ -47,9 +55,13 @@
         <div class="col">
             <div class="card">
                 <div class="card-header bg-primary"> </div>
-                <div class="card-body"> 
+                <div class="card-body" style="min-height: 289px;"> 
                     <h4> <b> Aggregate Analysis </b> </h4>
-                    Contnt content content content
+                    <p>
+                        Analyize aggregate phenophase onset and duration trends. <br><br>
+                        View tables and graphs of the average bud burst and leaf senescence onset dates and durations, 
+                        across all sites as well as view images of the site at said phenophase transition dates.
+                    </p>
                 </div>
                 <div class="card-footer" style="display:flex;justify-content:center;align-items:center;"> 
                     <a href="/analysis-aggregate/" class="btn btn-primary"> Go To Aggregate Analysis</a>
@@ -59,9 +71,14 @@
         <div class="col">
             <div class="card">
                 <div class="card-header bg-primary"> </div>
-                <div class="card-body"> 
+                <div class="card-body" style="min-height: 289px;"> 
                     <h4> <b> Spatial Analysis </b> </h4>
-                    Contnt content content content
+                    <p> 
+                        Analyize spatial trends of bud burst and leaf senescence phenophases across multiple sites. <br><br>
+                        Using an interactive GIS map, view the spatial patterns between sites' locations of onset dates 
+                        and durations of bud burst and leaf senescence phenophases.
+
+                    </p>
                 </div>
                 <div class="card-footer" style="display:flex;justify-content:center;align-items:center;"> 
                     <a href="/spatial-analysis/site-locations/" class="btn btn-primary"> Go To Spatial Analysis</a>
