--- a/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/site_list.html
+++ b/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/site_list.html
@@ -3,7 +3,7 @@
 {% block title %} Sites {% endblock %}
 
 {% block content %}
-    <div style="margin-top: 1rem;">
+    <div style="margin-top: 1rem; margin-bottom: 3rem;">
         <h2> Sites </h2>
         <form method='post' style='margin-bottom:1rem; display:flex; flex-direction: column; align-items: flex-end;'>
             {% csrf_token %}
