--- a/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/upload_images.html
+++ b/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/upload_images.html
@@ -18,8 +18,7 @@
             <span id="file-chosen" style="margin-left:1rem;">No file chosen</span>
         </div>
         <small id="fileHelp" class="form-text text-muted">Files must be JPG files and follow the naming convention "sitename_YYYY_MM_DD_HHMMSS.jpg"</small>
-        <p> &nbsp; </p>
-        <button class="btn btn-success" type='submit' name='upload_all' value="upload_all" style="margin-top: 10px;"> Upload </button>
+        <button class="btn btn-success" type='submit' name='upload_all' value="upload_all" style="margin-top: 1.5rem;"> Upload </button>
     </form>
 
     <script>
