--- a/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/base.html
+++ b/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/base.html
@@ -95,7 +95,7 @@
               <li class="dropdown" >
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">n8srumsey<span class="caret"></span></a>
                 <ul class="dropdown-menu" style="white-space: normal; right: 0; left: auto;">
-                  <h6 class="dropdown-header">Signed in as</h6>
+                  <h6 class="dropdown-header" style="padding-bottom: 04px">Signed in as</h6>
                   <h6 class="dropdown-header" style="font-weight: bold; padding-top: 0%;">n8srumsey</h6>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="/settings/">Settings</a>
