--- a/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/site-datamap.html
+++ b/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/site-datamap.html
@@ -19,8 +19,8 @@ table tr{
 <div style="margin-top: 1rem; margin-left: 18.5rem; margin-right: 18.5rem; width: 100%;">
 <h1> Spatial Analysis Data Selection </h1>
 <div style="display:flex;justify-content:left;align-items:center; margin-bottom: 1rem;">
-    <a href="/spatial-analysis/site-locations/"><button class="btn btn-outline-success btn-lg">Site Locations</button></a>
-    <a style="margin-left: 1em;" href='/map-dataselect/'><button class="btn btn-success btn-lg active">Data Visualization</button></a>
+    <a href='/spatial-analysis/site-locations/' class="btn btn-success btn-lg">Site Locations</a>
+    <a style="margin-left: 1em;" href='/map-dataselect/' class="btn btn-success btn-lg active">Data Visualization</a>
 </div>
 
 <table class="table table-hover" style="width: 45%; margin-bottom: 5rem;">
