Add basic documentation

--- a/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/data_management.html
+++ b/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/data_management.html
@@ -9,13 +9,13 @@
 {% endblock %}
 
 {% block sidenav %}
-<div class="col-md-auto" id="sticky-sidebar" style="margin-right: 2rem;">
+<div class="col-2" id="sticky-sidebar" style="margin-right: 2rem;">
     <div class="sticky-top"> 
         <div class="nav flex-column" style='margin-top:2rem; '>
             <div class="card text-white border-light mb-3" style="max-width: 20rem;">
                 <div class='card-header'><h5 style='color:black'>Data Management Menu</h5></div>
                 <div class="card-body">
-                    <h5><a href="/data-management/sites/">Sites</a></h5>
+                    <h5><a href="/data-management/sites/">View All Sites</a></h5>
                     <h5><a href="/data-management/sites/add/">Add New Site</a></h5>
                     <h5><a href="/data-management/upload_images/">Upload Images</a></h5>
                 </div>
@@ -29,35 +29,34 @@
 </div>
 {% endblock %}
 
-<div class="col order-1"></div>
-        {% block content %}
-        <div style="margin-top: 1rem;">
-            <h1> Data Management </h1>
-            <p> Manage sites and site data.</p>
-            <p> You can: </p>
-            <ul style="margin-top:-1rem;"> 
-                <li> Add new sites to the databse </li>
-                <li> Upload images to existing sites </li>
-                <li> View and edit site details</li>
-            </ul>
-            <p> Site details available: </p>
-            <ul style="margin-top:-1rem;"> 
-                <li> Site name </li>
-                <li> Location </li>
-                <li> Latitude and longitude coordinates </li>
-                <li> Elevation </li>
-                <li> Dominant deciduous broadleaf species </li>
-                <li> Date range of site images </li>
-            </ul>
-            <p> 
-                When images are uploaded they are classified as either occurring during the <br> 
-                bud burst phenophase or the leaf senescence phenophase, using a machine<br> 
-                learning classification model.
-            </p>
-            <p>
-                The transition dates of the phenophases are then estimated from the <br> 
-                series of classified images, the analysis of which can be viewed under <a href="/analysis/">Site Analysis</a>.
-            </p>
-        </div>
-        {% endblock %}
+{% block content %}
+<div style="margin-top: 1rem;">
+    <h1> Data Management </h1>
+    <p> Manage sites and site data.</p>
+    <p> You can: </p>
+    <ul style="margin-top:-1rem;"> 
+        <li> Add new sites to the databse </li>
+        <li> Upload images to existing sites </li>
+        <li> View and edit site details</li>
+    </ul>
+    <p> Site details available: </p>
+    <ul style="margin-top:-1rem;"> 
+        <li> Site name </li>
+        <li> Location </li>
+        <li> Latitude and longitude coordinates </li>
+        <li> Elevation </li>
+        <li> Dominant deciduous broadleaf species </li>
+        <li> Date range of site images </li>
+    </ul>
+    <p> 
+        When images are uploaded they are classified as either occurring during the <br> 
+        bud burst phenophase or the leaf senescence phenophase, using a machine<br> 
+        learning classification model.
+    </p>
+    <p>
+        The transition dates of the phenophases are then estimated from the <br> 
+        series of classified images, the analysis of which can be viewed under <a href="/analysis/">Site Analysis</a>.
+    </p>
+</div>
+{% endblock %}
 </div>
