--- a/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/home.html
+++ b/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/home.html
@@ -27,7 +27,7 @@
                     <h4> <b> Data Management </b> </h4>
                     <p> 
                         Manage your phenology data across multiple locations. <br><br> 
-                        Upload images of the site to take advantage of machine learning algrothims to classify
+                        Upload images from the site to take advantage of machine learning algorithms to classify
                         and determine phenophases and transition dates.
                     </p>
                 </div>
